# InteractiveAnalysis

./: CMakeLists.txt  README.md  bindata_4Mu  bindata_4Mu_Data  bindata_4Mu_MC  config.json  config_4Mu.json
include/: DataSource.h  EntryDialog.h  HistoContainer.h  HistoCreator.h  HistoManager.h  MainFrame.h  MyHistogramWrapper.h  RootDictLinkDef.h  SelectionBox.h
src/: DataSource.cxx  EntryDialog.cxx  HistoConfig.cxx  HistoContainer.cxx  HistoCreator.cxx  HistoManager.cxx  MainFrame.cxx  MyHistogramWrapper.cxx  SelectionBox.cxx
